tests/tests/checks/snapshots/analysis/cpp/big_cpp.cpp/main@include_big_header__html.snap
---
source: src/bin/test-index.rs
expression: "&aggr_str"
input_file: inputs/analysis/cpp/big_cpp.cpp/include_big_header__html
---
<div role="row" id="line-NORM" class="source-line-with-number">
  <div role="cell"><div role="button" aria-expanded="false" class="cov-strip cov-uncovered cov-unknown" aria-label="missing data"></div></div>
  <div role="cell"><div class="blame-strip" data-blame="BLAME" role="button" aria-expanded="false"></div></div>
  <div role="cell" class="line-number" data-line-number="NORM"></div>
  <code role="cell" class="source-line"><span class="syn_reserved" >#include</span> <span class="syn_string" data-symbols="FILE_big_header@2Eh" data-confidences="[&quot;concrete&quot;]">"big_header.h"</span>
</code>
</div>
