tests/tests/checks/snapshots/analysis/cpp/big_cpp.cpp/main@include_big_header__prodhtml.snap
---
source: src/bin/test-index.rs
expression: "&aggr_str"
snapshot_kind: text
---
<div role="row" id="line-NORM" class="source-line-with-number">
  <div role="cell"></div>
  <div role="cell"></div>
  <div role="cell" class="line-number" data-line-number="NORM"></div>
  <code role="cell" class="source-line"><span class="syn_reserved" >#include</span> <span class="syn_string" data-symbols="FILE_big_header@2Eh" data-confidences="[&quot;concrete&quot;]">"big_header.h"</span>
</code>
</div>
